# drift-rs

./: .env  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  drift_idl.rs  llms.txt
.github/workflows/: build.yml  manual-idl-update.yml  on-libdrift-update.yml  on-program-update.yml  release.yml  tmp-dispatch.yml
benches/: dlob.rs
crates/drift-abi-gen/: Cargo.toml  Makefile  drift_abi.rs
crates/drift-abi-gen/src/: main.rs
crates/drift-ffi/: Cargo.toml  Makefile  README.md  rust-toolchain.toml
crates/drift-ffi-sys/: Cargo.toml  README.md
crates/drift-ffi-sys/src/: exports.rs  lib.rs  types.rs
crates/drift-ffi/examples/drift-test/: Cargo.toml  README.md  rust-toolchain.toml
crates/drift-ffi/examples/drift-test/src/: drift_abi.rs  lib.rs
crates/drift-ffi/src/: exports.rs  lib.rs  types.rs
crates/drift-idl-gen/: Cargo.toml  Makefile  README.md  drift_idl.rs
crates/drift-idl-gen/src/: custom_types.rs  lib.rs  main.rs
crates/drift-sdk/: Cargo.toml
crates/drift-sdk/src/: auction_subscriber.rs  constants.rs  dlob_client.rs  drift_abi.rs  event_subscriber.rs  ffi.rs  jit_client.rs  lib.rs  marketmap.rs  memcmp.rs  oraclemap.rs  slot_subscriber.rs  types.rs  user.rs  usermap.rs  utils.rs  websocket_account_subscriber.rs  websocket_program_account_subscriber.rs
crates/drift-sdk/src/dlob/: dlob.rs  dlob_builder.rs  dlob_node.rs  market.rs  order_list.rs
crates/drift-sdk/src/math/: account_map_builder.rs  auction.rs  constants.rs  liquidation.rs  mod.rs  order.rs
crates/drift-test/: Cargo.toml  README.md
crates/drift-test/src/: drift_abi.rs  lib.rs
crates/pubsub-client/: Cargo.toml  README.md
crates/pubsub-client/src/: lib.rs
crates/pubsub_client/: Cargo.toml
crates/pubsub_client/src/: lib.rs
crates/src/: account_map.rs  async_utils.rs  auction_subscriber.rs  blockhash_subscriber.rs  constants.rs  dlob_client.rs  drift_idl.rs  event_emitter.rs  event_subscriber.rs  fastlane_order_subscriber.rs  ffi.rs  generic_callback_test.rs  jit_client.rs  jupiter.rs  lib.rs  market_state.rs  marketmap.rs  memcmp.rs  oraclemap.rs  polled_account_subscriber.rs  priority_fee_subscriber.rs  slot_subscriber.rs  swift_order_subscriber.rs  titan.rs  types.rs  user.rs  usermap.rs  utils.rs  wallet.rs  websocket_account_subscriber.rs  websocket_program_account_subscriber.rs
crates/src/dlob/: builder.rs  dlob.rs  dlob_builder.rs  dlob_node.rs  market.rs  mod.rs  order_list.rs  research.md  tests.rs  types.rs  util.rs
crates/src/grpc/: grpc_subscriber.rs  mod.rs
crates/src/math/: account_list_builder.rs  account_map_builder.rs  auction.rs  constants.rs  leverage.rs  liquidation.rs  mod.rs  order.rs  tiers.rs
examples/dlob-builder/: Cargo.toml
examples/dlob-builder/src/: clob.html  main.rs
examples/dlob-matching/: Cargo.toml  README.md
examples/dlob-matching/src/: main.rs
examples/drift-client-callbacks/: Cargo.toml  README.md
examples/drift-client-callbacks/src/: main.rs
examples/event-subscriber/: Cargo.toml  README.md
examples/event-subscriber/src/: main.rs
examples/fastlane/: Cargo.toml  README.md
examples/fastlane/src/: main.rs
examples/market-maker/: Cargo.toml  README.md
examples/market-maker/src/: grpc_marker.rs  main.rs  ws_maker.rs
examples/place-and-take/: Cargo.toml
examples/place-and-take/src/: main.rs
examples/simple-margin-calculation/: Cargo.toml
examples/simple-margin-calculation/src/: main.rs
examples/simplified-margin-example/: Cargo.toml
examples/simplified-margin-example/src/: main.rs
examples/swift/: Cargo.toml  README.md
examples/swift-maker/: Cargo.toml
examples/swift-maker/src/: main.rs
examples/swift-taker/: Cargo.toml  MissingOrderDebug.txt  README.md
examples/swift-taker/src/: main.rs
examples/swift/src/: main.rs
res/: drift.json  sol-oracle-pyth.hex  spot_market_1_76_0.hex
scripts/: idl-update.sh
src/: auction_subscriber.rs  blockhash_subscriber.rs  constants.rs  dlob.rs  dlob_client.rs  event_emitter.rs  event_subscriber.rs  jit_client.rs  lib.rs  liquidation.rs  marketmap.rs  memcmp.rs  oraclemap.rs  slot_subscriber.rs  types.rs  user.rs  usermap.rs  utils.rs  websocket_account_subscriber.rs  websocket_program_account_subscriber.rs
src/dlob/: dlob.rs  dlob_builder.rs  dlob_node.rs  market.rs  mod.rs  node_list.rs  order_list.rs
src/jupiter/: mod.rs  swap.rs  transaction_config.rs
src/jupiter/serde_helpers/: mod.rs
src/math/: account_map_builder.rs  auction.rs  leverage.rs  liquidation.rs  mod.rs  order.rs
tests/: integration.rs  jupiter.rs  titan.rs
