[package]
name = "drift-rs"
version = "1.0.0-alpha.15"
edition = "2021"
build = "build.rs"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/drift-labs/drift-rs"
homepage = "https://drift.trade"
description = """
Rust SDK for Drift V2 Protocol on the Solana blockchain.
"""
categories = ["cryptography::cryptocurrencies", "api-bindings"]
keywords = ["solana", "dex", "drift", "sdk"]

[lib]
path = "crates/src/lib.rs"

[features]
# run integration tests against RPC nodes
rpc_tests = []
# make more variables public - use with caution
unsafe_pub = []


[dependencies]
abi_stable = { version = "0.11", default-features = false }
ahash = "0.8.11"
anchor-lang = { version = "0.31", features = ["derive"] }
arrayvec = "0.7.6"
base64 = "0.22"
bytemuck = "1.17"
crossbeam = "0.8.4"
dashmap = "6"
env_logger = "0.11"
futures-util = "0.3"
hex = "0.4"
# TODO: use jup-ag version once solana crate versions relaxed
jupiter-swap-api-client = { git = "https://github.com/drift-labs/jupiter-swap-api-client", package = "jupiter-swap-api-client" }
log = "0.4"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-account-decoder-client-types = "2.1"
solana-rpc-client = "2.1"
solana-rpc-client-api = "2.1"
solana-sdk = "2.1"
solana-transaction-status = "2.1"
spl-associated-token-account = "6.0"
thiserror = "1"
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", rev = "bb3a44a" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc", rev = "bb3a44a" }

drift-pubsub-client = { version = "0.1.1", path = "crates/pubsub-client" }

[dev-dependencies]
bytes = "1"
hex-literal = "0.4"
solana-account-decoder = "2.1"
toml = "0.8"

[build-dependencies]
drift-idl-gen = { version = "0.2", path = "crates/drift-idl-gen" }
