[package]
name = "drift-rs"
version = "1.0.0-alpha.16"
edition = "2021"
build = "build.rs"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/drift-labs/drift-rs"
homepage = "https://drift.trade"
description = """
Rust SDK for Drift V2 Protocol on the Solana blockchain.
"""
categories = ["cryptography::cryptocurrencies", "api-bindings"]
keywords = ["solana", "dex", "drift", "sdk"]

[lib]
path = "crates/src/lib.rs"

[features]
# run integration tests against RPC nodes
rpc_tests = []
# make more variables public - use with caution
unsafe_pub = []
titan = ["titan-swap-api-client"]
# enable order event recording in DLOB
dlob_dbg = [] 

[dependencies]
ahash = "0.8.12"
anchor-lang = { version = "1.0.0-rc.2", features = ["derive"] }
arrayvec = "0.7.6"
base64 = "0.22"
bytemuck = "1.17"
crossbeam = "0.8.4"
dashmap = "6"
env_logger = "0.11"
futures-util = "0.3"
fxhash = "0.2.1"
hex = "0.4"
jupiter-swap-api-client = { git = "https://github.com/drift-labs/jupiter-swap-api-client", rev = "424ad8", package = "jupiter-swap-api-client" }
log = "0.4"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-account-decoder-client-types = "3"
solana-account = "3"
solana-commitment-config = "3"
solana-compute-budget-interface = "3"
solana-ed25519-program = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-message = "3"
solana-pubkey = "3"
solana-rpc-client = "3"
solana-rpc-client-api = "3"
solana-signature = "3"
solana-signer = "3"
solana-transaction = "3"
solana-transaction-status = "3"
spl-associated-token-account = "8.0"
thiserror = "1"
titan-swap-api-client = { git = "https://github.com/drift-labs/titan-swap-api-client.git", optional = true }
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", branch = "master" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc", branch = "master" }
drift-pubsub-client = { version = "0.1.1", path = "crates/pubsub-client" }

[dev-dependencies]
bs58 = { version = "0.5.1", default-features = false }
bytes = "1"
hex-literal = "0.4"
solana-account-decoder = "3"
solana-signature = { version = "3", features = ["rand"] }
toml = "0.8"

[build-dependencies]
drift-idl-gen = { version = "0.2", path = "crates/drift-idl-gen" }
