[package]
name = "drift-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11"
drift-program = { package = "drift", git = "https://github.com/drift-labs/protocol-v2.git", tag = "v2.93.0", features = [
    "mainnet-beta", "drift-rs"
] }
# pin to whatever version drift-program uses
hex = "*"
solana-program = { version = "1.16.*" }
solana-sdk = { version = "1.16.*" }

# its possible to export some common types alongside the dylib build
#[features]
#default = ["exports"]
#exports = ["solana-program", "drift-program"]

[dev-dependencies]
anchor-lang = "=0.29.0"
bytemuck = "1.17"
hex-literal = "*"
