[package]
name = "drift-idl-gen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/drift-labs/drift-rs"
description = "Generates Drift v2 structs/types from anchor IDL"

[lib]

[dependencies]
proc-macro2 = "*"
quote = "*"
syn = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sha2 = "*"