[package]
name = "drift-idl-gen"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/drift-labs/drift-rs"
description = "Generates Drift v2 structs/types from anchor IDL"

[lib]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"