[package]
name = "drift-pubsub-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/drift-labs/drift-rs"
description = "Solana Pubsub Client patched with proper connection handling"

[dependencies]
env_logger = "0.11"
futures-util = "0.3"
gjson = "0.8.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
solana-account-decoder = "2"
solana-client = "2"
solana-sdk = "2"
solana-rpc-client-api = "2"
solana-transaction-status = "2"
thiserror = "1"
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.5"
