[package]
name = "dlob-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
drift-rs = { path = "../../../drift-rs", features = ["unsafe_pub"] }
env_logger = "*"
solana-commitment-config = "2"
solana-keypair= "2"
tokio = "*"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
