[package]
name = "drift-client-callbacks"
version = "0.1.0"
edition = "2021"

[dependencies]
drift-rs = { path = "../.." }
solana-sdk = "2.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
anchor-lang = { version = "0.31", features = ["derive"] }
rust_decimal = "*"
