[package]
name = "swift-taker-example"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.13"
base64 = "0.22.1"
bincode = "1"
dotenv = "0.15.0"
drift-rs = { path = "../../../drift-rs" }
env_logger = "0.11"
hex = "0.4.3"
nanoid = "0.4.0"
reqwest = "0.12.22"
serde_json = "1.0.140"
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
tokio = "*"
