[package]
name = "swift-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "*"
dotenv = "0.15.0"
drift-rs = { path = "../../../drift-rs" }
env_logger = "0.11"
log = "0.4"
futures-util = "0.3.31"
solana-rpc-client-api = "2"
solana-sdk = "2"
solana-account-decoder-client-types = "2"
tokio = "*"
